# ghostfolio-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PRE_SEARCH.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  railway.json
.github/workflows/: evals-labeled.yml  evals.yml
_bmad-output/brainstorming/: brainstorming-session-2026-02-27.md
docs/: ARCHITECTURE.md  COST_ANALYSIS.md
docs/plans/: 2026-02-24-frontend-ui-design.md  2026-02-24-mvp-design.md  2026-02-24-new-tools-design.md  2026-02-27-3rd-party-api-clients.md  2026-02-28-alert-engine-design.md  2026-02-28-alert-engine-plan.md  2026-02-28-conviction-score-design.md  2026-02-28-conviction-score-plan.md  2026-02-28-error-handling-observability-design.md  2026-02-28-error-handling-observability-plan.md  2026-02-28-frontend-error-handling-design.md  2026-02-28-frontend-error-handling-plan.md  2026-02-28-morning-briefing-design.md  2026-02-28-morning-briefing-plan.md  2026-02-28-smart-holding-deep-dive.md  2026-03-01-benchmark-comparison-design.md  2026-03-01-benchmark-comparison-implementation.md  2026-03-01-command-palette-design.md  2026-03-01-command-palette-implementation.md  2026-03-01-congressional-trading-datastore-design.md  2026-03-01-data-source-attribution.md  2026-03-01-sidebar-ux-p0-design.md  2026-03-01-sidebar-ux-p0-implementation.md  2026-03-02-multi-user-auth-design.md  2026-03-02-multi-user-auth-implementation.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
scripts/: migrate_to_auth.py
src/ghostfolio_agent/: config.py  main.py  (+2 more)
(+104 files in other folders)
